fix: mobile overflow problem

--- a/public/styles.css
+++ b/public/styles.css
@@ -250,6 +250,8 @@ main {
 
     .inner {
         margin: 0;
+        overflow: hidden;
+        max-height: unset;
     }
 
     .wrapper {
